헤라미션_예은_수정

--- a/workspaces/hera-mission/index.html
+++ b/workspaces/hera-mission/index.html
@@ -1,4 +1,5 @@
 <div id="rouge-holic-sheer-matte-story-wrap">
+    <!-- header -->
     <header>
         <div class="header-inner">
             <h1 class="logo">HERA</h1>
@@ -154,9 +155,9 @@
             </nav>
             <div class="util">
                 <ul class="util-menu">
-                    <li><a href="" class="map"></a></li>
-                    <li><a href="" class="search"></a></li>
-                    <li><a href="" class="login"></a></li>
+                    <li><a href="#" class="map"></a></li>
+                    <li><a href="#" class="search"></a></li>
+                    <li><a href="#" class="login"></a></li>
                 </ul>
             </div>
         </div>
