--- a/workspaces/gmarket-mission/mission2.html
+++ b/workspaces/gmarket-mission/mission2.html
@@ -11,13 +11,13 @@
         <header class="layout-header">
             <div class="layout-inner">
                 <div class="header-left">
-                    <h1 class="header-logo">
+                    <h1 class="header-left__header-logo">
                         G마켓 BEST
                     </h1>
                     <a href="#none" class="btn-more"></a>
                 </div>
                 <div class="header-right">
-                    <div class="gnb-secletion">
+                    <div class="header-right__gnb-secletion">
                         <ul>
                             <li>
                                 <a href="#none">그룹별</a>
@@ -31,7 +31,12 @@
                 </div>
                 <nav class="header-gnb">
                     <ul class="header-gnb__gnb-list">
-                        
+                        <li>
+                            ALL
+                        </li>
+                        <li>
+                            
+                        </li>
                     </ul>
                 </nav>
             </div>
