--- a/workspaces/gmarket-mission/mission2.html
+++ b/workspaces/gmarket-mission/mission2.html
@@ -32,10 +32,10 @@
                 <nav class="header-gnb">
                     <ul class="header-gnb__gnb-list">
                         <li>
-                            ALL
+                            <a href="#none">ALL</a>
                         </li>
                         <li>
-                            
+                            <a href="#none"></a>
                         </li>
                     </ul>
                 </nav>
