예은/2차 과제-Gmarket BEST

--- a/workspaces/gmarket-mission/mission2.html
+++ b/workspaces/gmarket-mission/mission2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="layout">
         <header class="layout-header">
-            <div class="layout-inner">
+            <div class="layout__inner">
                 <div class="header-left">
                     <h1 class="header-left__header-logo">
                         G마켓 BEST
@@ -20,11 +20,13 @@
                     <div class="header-right__gnb-secletion">
                         <ul>
                             <li>
-                                <a href="#none">그룹별</a>
+                                <h2><a href="#none">그룹별</a></h2>
                             </li>
                             <li>
-                                <a href="#none">카테고리별</a>
-                                <a href="#none" class="btn-more"></a>
+                                <h2>
+                                    <a href="#none">카테고리별</a>
+                                    <a href="#none" class="btn-more"></a>
+                                </h2>
                             </li>
                         </ul>
                     </div>
@@ -32,15 +34,115 @@
                 <nav class="header-gnb">
                     <ul class="header-gnb__gnb-list">
                         <li>
-                            <a href="#none">ALL</a>
+                            <h3><a href="#none">ALL</a></h3>
                         </li>
                         <li>
-                            <a href="#none"></a>
+                            <h3><a href="#none"> <img src="" alt="패션의류 아이콘" class="image">패션의류</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="신발/잡화 아이콘" class="image">신발/잡화</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="화장품/헤어 아이콘" class="image">화장품/헤어</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="유아동/출산 아이콘" class="image">유아동/출산</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="식품 아이콘" class="image">식품</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="생활/주방/건강 아이콘" class="image">생활/주방/건강</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="가구/침구 아이콘" class="image">가구/침구</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="스포츠/자동차 아이콘" class="image">스포츠/자동차</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="컴퓨터/전자 아이콘" class="image">컴퓨터/전자</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="도서/음반 아이콘" class="image">도서/음반</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="여행 아이콘" class="image">여행</a></h3>
+                        </li>
+                        <li>
+                            <h3><a href="#none"> <img src="" alt="e쿠폰 아이콘" class="image">e쿠폰</a></h3>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
+        <main class="layout-main">
+            <div class="layout__inner">
+                <div class="main-product-area">
+                    <ol class="main-product-area__product-list">
+                        <li>
+                            <span>1</span>
+                            <a href="#">
+                                <div class="box-image">
+                                    <img src="" alt="[팔탄농협직영] 특등급 골드퀸 3호 수향미 쌀10kg 당일도정 산지직송 바로가기" class="image">
+                                </div>
+                                <div class="box-info">
+                                    <P class="box-info__prd-name">[팔탄농협직영] 특등급 골드퀸3호 수향미 쌀10kg 당일도정 산지직송</P>
+                                    <span class="box-info__price--before">32,300원</span>
+                                    <span class="box-info__price--now">31,290원</span>
+                                    <span class="box-info__discount">3%</span>
+                                    <span class="box-info__delivery--free">무료배송</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <span>2</span>
+                            <a href="#">
+                                <div class="box-image">
+                                    <img src="" alt="[래핑차일드]래핑차일드PLAY_Z 피케상하세트(82979-622-01) 바로가기" class="image">
+                                </div>
+                                <div class="box-info">
+                                    <P class="box-info__prd-name">[래핑차일드]래핑차일드PLAY_Z 피케상하세트(82979-622-01)</P>
+                                    <span class="box-info__price--before">49,900원</span>
+                                    <span class="box-info__price--now">27,900원</span>
+                                    <span class="box-info__discount">44%</span>
+                                    <span class="box-info__delivery--free">무료배송</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <span>3</span>
+                            <a href="#">
+                                <div class="box-image">
+                                    <img src="" alt="(21년산/삼광/특) 아산맑은쌀 삼광 10KG 바로가기" class="image">
+                                </div>
+                                <div class="box-info">
+                                    <P class="box-info__prd-name">(21년산/삼광/특) 아산맑은쌀 삼광 10KG</P>
+                                    <span class="box-info__price--now">33,900원</span>
+                                    <span class="box-info__delivery--smile">스마일배송</span>
+                                    <span class="box-info__delivery--free">무료배송</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <span>4</span>
+                            <a href="#">
+                                <div class="box-image">
+                                    <img src="" alt="[래핑차일드]래핑차일드5부 유틸리티팬츠(82329-400-32) 바로가기" class="image">
+                                </div>
+                                <div class="box-info">
+                                    <P class="box-info__prd-name">[래핑차일드]래핑차일드5부 유틸리티팬츠(82329-400-32)</P>
+                                    <span class="box-info__price--before">29,900원</span>
+                                    <span class="box-info__price--now">17,900원</span>
+                                    <span class="box-info__discount">40%</span>
+                                    <span class="box-info__delivery--free">무료배송</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
