--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -1,118 +1,122 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>나의 세계, Mamonde | 마몽드 한국 공식 웹사이트</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./fonts/font.css">
-     
-</head>
-<body>
+    <link rel="stylesheet" href="./css/scss/style.css" />
+    <link rel="stylesheet" href="./fonts/font.css" />
+  </head>
+  <body>
     <div id="wrap">
         <div class="layout__head">
+          <div class="section__inner">
             <header class="layout__header">
-                <div class="setion__inner">
-                    <div class="section__logo">
-                        <h1><a href="#"><img src="./img/logo.png" alt="마몽드 로고"></a></h1>
-                    </div>
-                    <div class="section__gnb">
-                        <ul>
-                            <li class="section__gnb--menu">
-                                <a href="#">베스트&신제품</a>
-                            </li>
-                            <li class="section__gnb--menu">
-                                <a href="#">제품</a>
-                            </li>
-                            <li class="section__gnb--menu">
-                                <a href="#">브랜드</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="section__util">
-                        <ul>
-                            <li class="section__util--item">
-                                <a href="#">로그인</a>
-                            </li>
-                            <li class="section__util--item">
-                                <a href="#">매장찾기</a>
-                            </li>
-                        </ul>
-                        <div class="icon icon__tooltip--search">
-                            <img src="" alt="">
-                        </div>
-                    </div>
+                <div class="section__gnb">
+                  <div class="section__logo">
+                    <h1>
+                      <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
+                    </h1>
+                  </div>
+                  <ul>
+                    <li class="section__gnb--menu">
+                      <a href="#">베스트&신제품</a>
+                    </li>
+                    <li class="section__gnb--menu">
+                      <a href="#">제품</a>
+                    </li>
+                    <li class="section__gnb--menu">
+                      <a href="#">브랜드</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="section__util">
+                  <ul>
+                    <li class="section__util--item">
+                      <a href="#">로그인</a>
+                    </li>
+                    <li class="section__util--item">
+                      <a href="#">매장찾기</a>
+                    </li>
+                  </ul>
+                  <div class="icon icon__tooltip--search">
+                    <img src="" alt="" />
+                  </div>
                 </div>
             </header>
-            <section class="section__main-banner">
-                <div class="section__inner">
-                    <div class="section__title">
-                        <a href="#">
-                            <span class="section__title--text">
-                                <em> NEW 로즈 하이드라  글로리 앰플</em>
-                                한 겹으로 한 결 다른 고밀도 수분광
-                            </span>
-                            <span class="section__title--btn-more">
-                                자세히 보기
-                            </span>
-                        </a>
-                    </div>
-                    <div class="section__rolling-navi">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </section>
+          </div>
         </div>
-        <main class="layout__body">
-            <!-- Skincare Solution -->
-            <section class="section__content">
-                <div class="setion__inner">
-                    <div class="section__tit-box">
-                        <h2 class="section__tit-box--title">Skincare Solution</h2>
-                        <span class="section__tit-box--highlight"><img src="" alt=""></span>
-                    </div>
-                    <div class="section__solution-contents">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </section>
-            <!--// Skincare Solution -->
-            <!-- Mamonde Exclusive -->
-            <section class="section__content">
-                <div class="setion__inner">
-                    <div class="section__tit-box">
-                        <h2 class="section__tit-box--title"> Mamonde Exclusive</h2>
-                        <span class="section__tit-box--highlight"><img src="" alt=""></span>
-                    </div>
-                    <div class="section__exclusive-contents">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </section>
-            <!--// Mamonde Exclusive -->
-            <!-- Brand Story -->
-            <section class="section__content">
-                <div class="setion__inner">
-                    <div class="section__brand-story-contents">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </section>
-             <!--// Brand Story -->
-            <!-- With #Mamonde -->
-            <section class="section__content">
-                <div class="setion__inner">
-                    <div class="section__with-contents">
-                        <img src="" alt="">
-                    </div>
-                </div>
-            </section>
-             <!--// With #Mamonde -->
-        </main>
-        <footer class="layout__footer">
-            <img src="" alt="">
-        </footer>
+        <section class="section__main-banner">
+          <div class="section__inner">
+            <div class="section__title">
+              <a href="#">
+                <span class="section__title--text">
+                  <em> NEW 로즈 하이드라 글로리 앰플</em>
+                  한 겹으로 한 결 다른 고밀도 수분광
+                </span>
+                <span class="section__title--btn-more"> 자세히 보기 </span>
+              </a>
+            </div>
+            <div class="section__rolling-navi">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+      </div>
+      <main class="layout__body">
+        <!-- Skincare Solution -->
+        <section class="section__content">
+          <div class="setion__inner">
+            <div class="section__tit-box">
+              <h2 class="section__tit-box--title">Skincare Solution</h2>
+              <span class="section__tit-box--highlight"
+                ><img src="" alt=""
+              /></span>
+            </div>
+            <div class="section__solution-contents">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+        <!--// Skincare Solution -->
+        <!-- Mamonde Exclusive -->
+        <section class="section__content">
+          <div class="setion__inner">
+            <div class="section__tit-box">
+              <h2 class="section__tit-box--title">Mamonde Exclusive</h2>
+              <span class="section__tit-box--highlight"
+                ><img src="" alt=""
+              /></span>
+            </div>
+            <div class="section__exclusive-contents">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+        <!--// Mamonde Exclusive -->
+        <!-- Brand Story -->
+        <section class="section__content">
+          <div class="setion__inner">
+            <div class="section__brand-story-contents">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+        <!--// Brand Story -->
+        <!-- With #Mamonde -->
+        <section class="section__content">
+          <div class="setion__inner">
+            <div class="section__with-contents">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </section>
+        <!--// With #Mamonde -->
+      </main>
+      <footer class="layout__footer">
+        <img src="" alt="" />
+      </footer>
     </div>
-    </body>
+  </body>
 </html>
