--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -13,26 +13,23 @@
         <div class="layout__head">
           <div class="section__inner">
             <header class="layout__header">
-                <div class="section__gnb">
-                  <div class="section__logo">
-                    <h1>
-                      <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
-                    </h1>
-                  </div>
-                  <ul>
-                    <li class="section__gnb--menu">
-                      <a href="#">베스트&신제품</a>
-                    </li>
-                    <li class="section__gnb--menu">
-                      <a href="#">제품</a>
-                    </li>
-                    <li class="section__gnb--menu">
-                      <a href="#">브랜드</a>
-                    </li>
-                  </ul>
+              <div class="section__header-menu">
+                <div class="section__logo">
+                    <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
                 </div>
-                <div class="section__util">
-                  <ul>
+                <ul class="section__gnb">
+                  <li class="section__gnb--menu">
+                    <a href="#">베스트&신제품</a>
+                  </li>
+                  <li class="section__gnb--menu">
+                    <a href="#">제품</a>
+                  </li>
+                  <li class="section__gnb--menu">
+                    <a href="#">브랜드</a>
+                  </li>
+                </ul>
+                <div class="section__util-wrap">
+                  <ul class="section__util">
                     <li class="section__util--item">
                       <a href="#">로그인</a>
                     </li>
@@ -44,6 +41,7 @@
                     <img src="" alt="" />
                   </div>
                 </div>
+              </div>
             </header>
           </div>
         </div>
@@ -63,60 +61,59 @@
             </div>
           </div>
         </section>
-      </div>
-      <main class="layout__body">
-        <!-- Skincare Solution -->
-        <section class="section__content">
-          <div class="setion__inner">
-            <div class="section__tit-box">
-              <h2 class="section__tit-box--title">Skincare Solution</h2>
-              <span class="section__tit-box--highlight"
-                ><img src="" alt=""
-              /></span>
+        <main class="layout__body">
+          <!-- Skincare Solution -->
+          <section class="section__content">
+            <div class="setion__inner">
+              <div class="section__tit-box">
+                <h2 class="section__tit-box--title">Skincare Solution</h2>
+                <span class="section__tit-box--highlight"
+                  ><img src="" alt=""
+                /></span>
+              </div>
+              <div class="section__solution-contents">
+                <img src="" alt="" />
+              </div>
             </div>
-            <div class="section__solution-contents">
-              <img src="" alt="" />
+          </section>
+          <!--// Skincare Solution -->
+          <!-- Mamonde Exclusive -->
+          <section class="section__content">
+            <div class="setion__inner">
+              <div class="section__tit-box">
+                <h2 class="section__tit-box--title">Mamonde Exclusive</h2>
+                <span class="section__tit-box--highlight"
+                  ><img src="" alt=""
+                /></span>
+              </div>
+              <div class="section__exclusive-contents">
+                <img src="" alt="" />
+              </div>
             </div>
-          </div>
-        </section>
-        <!--// Skincare Solution -->
-        <!-- Mamonde Exclusive -->
-        <section class="section__content">
-          <div class="setion__inner">
-            <div class="section__tit-box">
-              <h2 class="section__tit-box--title">Mamonde Exclusive</h2>
-              <span class="section__tit-box--highlight"
-                ><img src="" alt=""
-              /></span>
+          </section>
+          <!--// Mamonde Exclusive -->
+          <!-- Brand Story -->
+          <section class="section__content">
+            <div class="setion__inner">
+              <div class="section__brand-story-contents">
+                <img src="" alt="" />
+              </div>
             </div>
-            <div class="section__exclusive-contents">
-              <img src="" alt="" />
+          </section>
+          <!--// Brand Story -->
+          <!-- With #Mamonde -->
+          <section class="section__content">
+            <div class="setion__inner">
+              <div class="section__with-contents">
+                <img src="" alt="" />
+              </div>
             </div>
-          </div>
-        </section>
-        <!--// Mamonde Exclusive -->
-        <!-- Brand Story -->
-        <section class="section__content">
-          <div class="setion__inner">
-            <div class="section__brand-story-contents">
-              <img src="" alt="" />
-            </div>
-          </div>
-        </section>
-        <!--// Brand Story -->
-        <!-- With #Mamonde -->
-        <section class="section__content">
-          <div class="setion__inner">
-            <div class="section__with-contents">
-              <img src="" alt="" />
-            </div>
-          </div>
-        </section>
-        <!--// With #Mamonde -->
-      </main>
-      <footer class="layout__footer">
-        <img src="" alt="" />
-      </footer>
+          </section>
+          <!--// With #Mamonde -->
+        </main>
+        <footer class="layout__footer">
+          <img src="" alt="" />
+        </footer>
     </div>
   </body>
 </html>
