--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -38,7 +38,7 @@
                     </li>
                   </ul>
                   <div class="icon icon__tooltip--search">
-                    <img src="" alt="" />
+                    <img src="./img/mamonde_main_search.png" alt="검색">
                   </div>
                 </div>
               </div>
