--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="wrap">
+      <!-- layout__head -->
         <div class="layout__head">
           <div class="section__inner">
             <header class="layout__header">
@@ -45,75 +46,84 @@
             </header>
           </div>
         </div>
+        <!--// layout__head -->
+        <!-- main__banner -->
         <section class="section__main-banner">
-          <div class="section__inner">
             <div class="section__title">
               <a href="#">
-                <span class="section__title--text">
-                  <em> NEW 로즈 하이드라 글로리 앰플</em>
-                  한 겹으로 한 결 다른 고밀도 수분광
-                </span>
-                <span class="section__title--btn-more"> 자세히 보기 </span>
+                  <em class="section__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
+                  <span class="section__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
+                  <span class="section__title--btn-more"> 자세히 보기 </span>
               </a>
             </div>
             <div class="section__rolling-navi">
-              <img src="" alt="" />
+              <img src="./img/mamonde_main_rolling.png" alt="롤링 바" />
             </div>
-          </div>
         </section>
+        <!--// main__banner -->
+        <!-- layout__body -->
         <main class="layout__body">
           <!-- Skincare Solution -->
-          <section class="section__content">
-            <div class="setion__inner">
+          <section class="section__content skincare-solution">
+            <div class="section__inner">
               <div class="section__tit-box">
-                <h2 class="section__tit-box--title">Skincare Solution</h2>
-                <span class="section__tit-box--highlight"
-                  ><img src="" alt=""
-                /></span>
+                <h2 class="section__title">Skincare Solution</h2>
+                <span class="section__highlight">
+                  <img src="./img/mamonde_main_icon_recommend_01.png" alt="Recommended"/>
+                </span>
               </div>
-              <div class="section__solution-contents">
-                <img src="" alt="" />
+              <div class="section__main-contents">
+                <img src="./img/mamonde_main_layout_body_img_01.jpg" alt="" />
               </div>
             </div>
           </section>
           <!--// Skincare Solution -->
           <!-- Mamonde Exclusive -->
-          <section class="section__content">
-            <div class="setion__inner">
+          <section class="section__content mamonde-exclusive">
+            <div class="section__inner">
               <div class="section__tit-box">
-                <h2 class="section__tit-box--title">Mamonde Exclusive</h2>
-                <span class="section__tit-box--highlight"
-                  ><img src="" alt=""
-                /></span>
+                <h2 class="section__title">Mamonde Exclusive</h2>
+                <span class="section__highlight">
+                  <img src="./img/mamonde_main_icon_recommend_02.png" alt="Recommended"/>
+                </span>
               </div>
-              <div class="section__exclusive-contents">
-                <img src="" alt="" />
+              <div class="section__main-contents">
+                <img src="./img/mamonde_main_layout_body_img_02.jpg" alt="" />
               </div>
             </div>
           </section>
           <!--// Mamonde Exclusive -->
           <!-- Brand Story -->
-          <section class="section__content">
-            <div class="setion__inner">
+          <section class="section__content brand-story">
+            <div class="section__inner">
+              <div class="section__tit-box">
+                <h2 class="section__title">Brand Story</h2>
+              </div>
               <div class="section__brand-story-contents">
-                <img src="" alt="" />
+                <img src="./img/mamonde_main_layout_body_img_03.jpg" alt="" />
               </div>
             </div>
           </section>
           <!--// Brand Story -->
           <!-- With #Mamonde -->
-          <section class="section__content">
-            <div class="setion__inner">
+          <section class="section__content with-mamonde">
+            <div class="section__inner">
+              <div class="section__tit-box">
+                <h2 class="section__title">With #Mamonde</h2>
+              </div>
               <div class="section__with-contents">
-                <img src="" alt="" />
+                <img src="./img/mamonde_main_layout_body_img_04.jpg" alt="" />
               </div>
             </div>
           </section>
           <!--// With #Mamonde -->
         </main>
+        <!--// layout__body -->
+        <!-- layout__footer -->
         <footer class="layout__footer">
           <img src="" alt="" />
         </footer>
+        <!--// layout__footer -->
     </div>
   </body>
 </html>
