--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -10,10 +10,18 @@
   </head>
   <body>
     <div id="wrap">
-      <!-- layout__head -->
-        <div class="layout__head">
+      <!-- layout__top -->
+        <div class="layout__top">
           <div class="section__inner">
-            <header class="layout__header">
+            <div class="icon icon__arrow">
+              <div class="icon icon__arrow--left">
+                <img src="./img/mamonde_main_arrow_left.png" alt="">
+              </div>
+              <div class="icon icon__arrow--right">
+                <img src="./img/mamonde_main_arrow_right.png" alt="">
+              </div>
+            </div>
+            <header class="section__header">
               <div class="section__header-menu">
                 <div class="section__logo">
                     <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
@@ -45,22 +53,24 @@
               </div>
             </header>
           </div>
-        </div>
-        <!--// layout__head -->
-        <!-- main__banner -->
-        <section class="section__main-banner">
+          <!-- main__banner -->
+          <section class="section__main-banner">
             <div class="section__title">
+              <em class="section__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
+              <span class="section__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
               <a href="#">
-                  <em class="section__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
-                  <span class="section__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
-                  <span class="section__title--btn-more"> 자세히 보기 </span>
+                <span class="section__title--btn-more"> 자세히 보기 </span>
               </a>
             </div>
             <div class="section__rolling-navi">
               <img src="./img/mamonde_main_rolling.png" alt="롤링 바" />
             </div>
-        </section>
-        <!--// main__banner -->
+          </section>
+         <!--// main__banner -->
+        </div>
+        <!--// layout__top -->
+
+     
         <!-- layout__body -->
         <main class="layout__body">
           <!-- Skincare Solution -->
@@ -121,7 +131,7 @@
         <!--// layout__body -->
         <!-- layout__footer -->
         <footer class="layout__footer">
-          <img src="" alt="" />
+          <img src="./img/mamonde_main_layout_footer_img_01.jpg" alt="" />
         </footer>
         <!--// layout__footer -->
     </div>
