반응형 단위 수정

--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -55,11 +55,11 @@
           </div>
           <!-- main__banner -->
           <section class="section__main-banner">
-            <div class="section__title">
-              <em class="section__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
-              <span class="section__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
+            <div class="main__title">
+              <em class="main__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
+              <span class="main__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
               <a href="#">
-                <span class="section__title--btn-more"> 자세히 보기 </span>
+                <span class="main__title--btn-more"> 자세히 보기 </span>
               </a>
             </div>
             <div class="section__rolling-navi">
