반응형 단위 수정

--- a/workspaces/mamonde_main/index.html
+++ b/workspaces/mamonde_main/index.html
@@ -12,61 +12,61 @@
     <div id="wrap">
       <!-- layout__top -->
         <div class="layout__top">
-          <div class="section__inner">
-            <div class="icon icon__arrow">
-              <div class="icon icon__arrow--left">
-                <img src="./img/mamonde_main_arrow_left.png" alt="">
-              </div>
-              <div class="icon icon__arrow--right">
-                <img src="./img/mamonde_main_arrow_right.png" alt="">
-              </div>
-            </div>
-            <header class="section__header">
-              <div class="section__header-menu">
-                <div class="section__logo">
-                    <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
+          <div class="section__main-banner">
+            <div class="section__inner">
+              <div class="icon icon__arrow">
+                <div class="icon icon__arrow--left">
+                  <img src="./img/mamonde_main_arrow_left.png" alt="">
                 </div>
-                <ul class="section__gnb">
-                  <li class="section__gnb--menu">
-                    <a href="#">베스트&신제품</a>
-                  </li>
-                  <li class="section__gnb--menu">
-                    <a href="#">제품</a>
-                  </li>
-                  <li class="section__gnb--menu">
-                    <a href="#">브랜드</a>
-                  </li>
-                </ul>
-                <div class="section__util-wrap">
-                  <ul class="section__util">
-                    <li class="section__util--item">
-                      <a href="#">로그인</a>
+                <div class="icon icon__arrow--right">
+                  <img src="./img/mamonde_main_arrow_right.png" alt="">
+                </div>
+              </div>
+              <header class="section__header">
+                <div class="section__header-menu">
+                  <div class="section__logo">
+                      <a href="#"><img src="./img/mamonde_main_logo.png" alt="마몽드 로고" /></a>
+                  </div>
+                  <ul class="section__gnb">
+                    <li class="section__gnb--menu">
+                      <a href="#">베스트&신제품</a>
                     </li>
-                    <li class="section__util--item">
-                      <a href="#">매장찾기</a>
+                    <li class="section__gnb--menu">
+                      <a href="#">제품</a>
+                    </li>
+                    <li class="section__gnb--menu">
+                      <a href="#">브랜드</a>
                     </li>
                   </ul>
-                  <div class="icon icon__tooltip--search">
-                    <img src="./img/mamonde_main_search.png" alt="검색">
+                  <div class="section__util-wrap">
+                    <ul class="section__util">
+                      <li class="section__util--item">
+                        <a href="#">로그인</a>
+                      </li>
+                      <li class="section__util--item">
+                        <a href="#">매장찾기</a>
+                      </li>
+                    </ul>
+                    <div class="icon icon__tooltip--search">
+                      <img src="./img/mamonde_main_search.png" alt="검색">
+                    </div>
                   </div>
                 </div>
-              </div>
-            </header>
+              </header>
+              <section class="section__main-visual">
+                <div class="main__title">
+                  <em class="main__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
+                  <span class="main__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
+                </div>
+                <a class="btn btn__more" href="#">
+                  <span class="btn__more--txt"> 자세히 보기 </span>
+                </a>
+                <div class="section__rolling-navi">
+                  <img src="./img/mamonde_main_rolling.png" alt="롤링 바" />
+                </div>
+              </section>
+            </div>
           </div>
-          <!-- main__banner -->
-          <section class="section__main-banner">
-            <div class="main__title">
-              <em class="main__title--b-text"> NEW 로즈 하이드라 <br> 글로리 앰플</em>
-              <span class="main__title--text">한 겹으로 한 결 다른 고밀도 수분광</span>
-              <a href="#">
-                <span class="main__title--btn-more"> 자세히 보기 </span>
-              </a>
-            </div>
-            <div class="section__rolling-navi">
-              <img src="./img/mamonde_main_rolling.png" alt="롤링 바" />
-            </div>
-          </section>
-         <!--// main__banner -->
         </div>
         <!--// layout__top -->
 
